compilateurDeca/src/test/deca/codegen/valid/sans_objet/conversion.deca
// Description:
//    Tests conversion indirect 
// Resultats:
//    ok
// Historique:
//    cree le 11/01/2026
{
    float f;
    f = 1; 
    if (f == 1.0) {
        println("ok");
    } else {
        println("Erreur");
    }
}