compilateurDeca/src/test/deca/codegen/invalid/sans_objet/div_par_zero.deca
// Description:
//    Sans-Objet
//    Erreur à l'execution: division par 0
//
// Resultats:
//    Erreur d'execution
//
// Historique:
//    cree le 10/01/2026

{
    println(1 / 0);
}
